--- a/nginx/html/user-detail.html
+++ b/nginx/html/user-detail.html
@@ -39,37 +39,9 @@
             <!-- Content will be loaded by JavaScript -->
         </div>
     </main>
-
-    <!-- Scripts -->
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
-    <script src="/js/utils.js"></script>
-    <script src="/js/models.js"></script>
-    <script src="/js/init.js"></script>
-    <script src="/js/database.js"></script>
-    <script src="/js/auth.js"></script>
-    <script src="/js/admin.js"></script>
-    <script src="/js/chat.js"></script>
-    <script src="/js/app.js"></script>
-    
-    <script>
-        $(document).ready(function() {
-            console.log('👤 User detail page loaded');
-            
-            // Initialize the app
-            if (typeof DevstralApp !== 'undefined') {
-                DevstralApp.init().then(() => {
-                    // App will handle routing and authentication
-                    console.log('✅ User detail app initialized');
-                }).catch(error => {
-                    console.error('❌ User detail app initialization failed:', error);
-                    Utils.showFlashMessage('Failed to initialize user details', 'error');
-                });
-            } else {
-                console.error('❌ DevstralApp not found');
-                Utils.showFlashMessage('Application not found', 'error');
-            }
-        });
-    </script>
+    <script src="/js/client.js"></script>
+
 </body>
 </html>
