--- a/nginx/html/rate_limit.html
+++ b/nginx/html/rate_limit.html
@@ -1,4 +1,4 @@
-<!-- rate_limited.html -->
+<!-- rate_limit.html -->
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
@@ -7,7 +7,7 @@
     <title>Rate Limited</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -48,4 +48,3 @@
     </main>
 </body>
 </html>
-
