--- a/nginx/html/unauthorised.html
+++ b/nginx/html/unauthorised.html
@@ -1,4 +1,4 @@
-<!-- unauthorized.html -->
+<!-- unauthorised.html -->
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
@@ -7,7 +7,7 @@
     <title>Unauthorized</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/common.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
