--- a/nginx/html/chat.html
+++ b/nginx/html/chat.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Chat</title>
-    <script src="/static/js/common.js"></script>
+  <title>Chat</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/static/js/common.js"></script>
 </head>
-<body>
-    <h1>Chat</h1>
-    <button id="logout">Logout</button>
+<body class="container mt-5">
+  <h1><i class="fas fa-comments"></i> Chat</h1>
+  <textarea id="chat" rows="15" class="form-control mb-2" readonly></textarea>
+  <input type="text" id="messageInput" class="form-control mb-2" placeholder="Type your message...">
+  <button onclick="sendMessage()" class="btn btn-info"><i class="fas fa-paper-plane"></i> Send</button>
 
-    <script>
-        (async () => {
-            try {
-                const res = await DevstralCommon.fetchWithAuth('/api/auth/check');
-                const data = await res.json();
-                if (!data.success) {
-                    window.location.href = '/login';
-                }
-            } catch (err) {
-                window.location.href = '/login';
-            }
-        })();
-
-        document.getElementById('logout').addEventListener('click', () => {
-            DevstralCommon.logout();
-        });
-    </script>
+  <script>
+    async function loadChat() {
+      const res = await apiGet("/api/chat/load");
+      if (res.messages) {
+        document.getElementById("chat").value = res.messages.map(m => m.content).join("\n");
+      }
+    }
+    async function sendMessage() {
+      const msg = document.getElementById("messageInput").value;
+      if (!msg) return;
+      const res = await apiPost("/api/chat/save", { messages: [{ content: msg }] });
+      if (res.success) {
+        await loadChat();
+        document.getElementById("messageInput").value = "";
+      }
+    }
+    loadChat();
+  </script>
 </body>
 </html>
