--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Home</title>
-    <script src="/static/js/common.js"></script>
+  <title>LLM Home</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      height: 100%;
+      font-family: sans-serif;
+      background: #111;
+      color: white;
+    }
+    #overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      z-index: 1;
+    }
+    #overlay h1 {
+      font-size: 2.5rem;
+    }
+    #overlay p {
+      font-size: 1.2rem;
+    }
+    a.btn {
+      margin: 5px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Devstral</h1>
-    <a href="/login">Login</a> | <a href="/register">Register</a> | <a href="/chat">Chat</a>
+  <canvas id="bg"></canvas>
+  <div id="overlay">
+    <h1><i class="fas fa-robot"></i> Welcome to Devstral LLM App</h1>
+    <p class="lead">Your private local AI chat and admin system</p>
+    <a href="/login" class="btn btn-primary">
+      <i class="fas fa-sign-in-alt"></i> Login
+    </a>
+    <a href="/register" class="btn btn-success">
+      <i class="fas fa-user-plus"></i> Register
+    </a>
+    <a href="/chat" class="btn btn-info">
+      <i class="fas fa-comments"></i> Chat
+    </a>
+    <a href="/admin" class="btn btn-warning">
+      <i class="fas fa-tools"></i> Admin
+    </a>
+  </div>
+
+  <script>
+    const canvas = document.getElementById("bg");
+    const ctx = canvas.getContext("2d");
+    let nodes = [];
+    const numNodes = 50;
+
+    function resize() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resize);
+    resize();
+
+    for (let i = 0; i < numNodes; i++) {
+      nodes.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        vx: (Math.random() - 0.5) * 0.5,
+        vy: (Math.random() - 0.5) * 0.5,
+      });
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Move nodes
+      nodes.forEach(node => {
+        node.x += node.vx;
+        node.y += node.vy;
+        if (node.x < 0 || node.x > canvas.width) node.vx *= -1;
+        if (node.y < 0 || node.y > canvas.height) node.vy *= -1;
+      });
+
+      // Draw connections
+      for (let i = 0; i < numNodes; i++) {
+        for (let j = i + 1; j < numNodes; j++) {
+          const dx = nodes[i].x - nodes[j].x;
+          const dy = nodes[i].y - nodes[j].y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          if (dist < 120) {
+            ctx.strokeStyle = "rgba(255, 255, 255, 0.1)";
+            ctx.lineWidth = 1;
+            ctx.beginPath();
+            ctx.moveTo(nodes[i].x, nodes[i].y);
+            ctx.lineTo(nodes[j].x, nodes[j].y);
+            ctx.stroke();
+          }
+        }
+      }
+
+      // Draw nodes
+      nodes.forEach(node => {
+        ctx.fillStyle = "rgba(255,255,255,0.6)";
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, 2, 0, Math.PI * 2);
+        ctx.fill();
+      });
+
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+  </script>
 </body>
 </html>
