--- a/nginx/html/login.html
+++ b/nginx/html/login.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Login</title>
-    <script src="/static/js/common.js"></script>
+  <title>Login</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/static/js/common.js"></script>
 </head>
-<body>
-    <h1>Login</h1>
-    <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
+<body class="container mt-5">
+  <h1><i class="fas fa-sign-in-alt"></i> Login</h1>
+  <form id="loginForm" class="mb-3">
+    <input type="text" id="username" class="form-control mb-2" placeholder="Username" required>
+    <input type="password" id="password" class="form-control mb-2" placeholder="Password" required>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  <div id="flash-messages"></div>
 
-    <div id="flash-messages"></div>
-
-    <script>
-        document.getElementById('login-form').addEventListener('submit', async function(e) {
-            e.preventDefault();
-            try {
-                const username = DevstralCommon.val('#username');
-                const password = DevstralCommon.val('#password');
-                const res = await DevstralCommon.login(username, password);
-
-                if (res.success) {
-                    window.location.href = '/chat';
-                } else {
-                    DevstralCommon.showFlashMessage('Login failed', 'danger');
-                }
-            } catch (err) {
-                DevstralCommon.showFlashMessage(err.message, 'danger');
-            }
-        });
-    </script>
+  <script>
+    document.getElementById("loginForm").onsubmit = async function(e) {
+      e.preventDefault();
+      const username = DevstralCommon.val("#username");
+      const password = DevstralCommon.val("#password");
+      const res = await DevstralCommon.login(username, password);
+      if (res.success && res.token) {
+        localStorage.setItem("jwt", res.token);
+        location.href = "/chat";
+      } else {
+        DevstralCommon.showFlashMessage("Login failed.", "danger");
+      }
+    };
+  </script>
 </body>
 </html>
