--- a/nginx/html/register.html
+++ b/nginx/html/register.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Register</title>
-    <script src="/static/js/common.js"></script>
+  <title>Register</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/static/js/common.js"></script>
 </head>
-<body>
-    <h1>Register</h1>
-    <form id="register-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Register</button>
-    </form>
+<body class="container mt-5">
+  <h1><i class="fas fa-user-plus"></i> Register</h1>
+  <form id="registerForm" class="mb-3">
+    <input type="text" id="username" class="form-control mb-2" placeholder="Username" required>
+    <input type="password" id="password" class="form-control mb-2" placeholder="Password" required>
+    <button type="submit" class="btn btn-success">Register</button>
+  </form>
+  <div id="flash-messages"></div>
 
-    <div id="flash-messages"></div>
-
-    <script>
-        document.getElementById('register-form').addEventListener('submit', async function(e) {
-            e.preventDefault();
-            const username = DevstralCommon.val('#username');
-            const password = DevstralCommon.val('#password');
-            try {
-                const res = await fetch('/api/auth/register', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ username, password })
-                });
-                const data = await res.json();
-                if (res.ok && data.success) {
-                    window.location.href = '/login';
-                } else {
-                    DevstralCommon.showFlashMessage(data.error || 'Registration failed', 'danger');
-                }
-            } catch (err) {
-                DevstralCommon.showFlashMessage(err.message, 'danger');
-            }
-        });
-    </script>
+  <script>
+    document.getElementById("registerForm").onsubmit = async function(e) {
+      e.preventDefault();
+      const username = DevstralCommon.val("#username");
+      const password = DevstralCommon.val("#password");
+      const res = await fetch("/api/register", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password })
+      });
+      const data = await res.json();
+      if (res.ok && data.success) {
+        window.location.href = "/login";
+      } else {
+        DevstralCommon.showFlashMessage(data.error || "Registration failed", "danger");
+      }
+    };
+  </script>
 </body>
 </html>
