--- a/nginx/html/unauthorised.html
+++ b/nginx/html/unauthorised.html
@@ -7,7 +7,7 @@
     <title>Unauthorized</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/common.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
