--- a/nginx/html/admin.html
+++ b/nginx/html/admin.html
@@ -5,31 +5,37 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/common.css">
   <script src="/static/js/common.js"></script>
+  <style>
+    body { background-color: #111; color: #eee; }
+  </style>
 </head>
-<body class="container mt-5">
-  <h1><i class="fas fa-tools"></i> Admin Panel</h1>
-  <div id="message"></div>
-  <button onclick="loadPending()" class="btn btn-warning mb-3"><i class="fas fa-sync"></i> Load Pending Users</button>
-  <ul id="pendingList" class="list-group"></ul>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Devstral</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
+      </ul>
+      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
+      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <h2>Admin Panel</h2>
+    <p>Admin actions go here.</p>
+  </div>
 
   <script>
-    async function loadPending() {
-      const res = await apiGet("/api/admin/pending");
-      const list = document.getElementById("pendingList");
-      list.innerHTML = "";
-      if (!res.success || !res.users) {
-        document.getElementById("message").innerText = "Access denied or failed to load.";
-        return;
-      }
-      res.users.forEach(u => {
-        const li = document.createElement("li");
-        li.className = "list-group-item";
-        li.innerText = u.username;
-        list.appendChild(li);
-      });
-    }
+  (async () => {
+    try {
+      const res = await apiGet("/api/auth/me");
+      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
+      else document.getElementById("navbar-username").innerText = "Guest";
+    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
+  })();
   </script>
 </body>
 </html>
