--- a/nginx/html/chat.html
+++ b/nginx/html/chat.html
@@ -5,32 +5,41 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/common.css">
   <script src="/static/js/common.js"></script>
+  <style>
+    body { background-color: #111; color: #eee; }
+  </style>
 </head>
-<body class="container mt-5">
-  <h1><i class="fas fa-comments"></i> Chat</h1>
-  <textarea id="chat" rows="15" class="form-control mb-2" readonly></textarea>
-  <input type="text" id="messageInput" class="form-control mb-2" placeholder="Type your message...">
-  <button onclick="sendMessage()" class="btn btn-info"><i class="fas fa-paper-plane"></i> Send</button>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Devstral</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
+      </ul>
+      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
+      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <h2>Chat</h2>
+    <div id="chat-box" class="border p-3 mb-3" style="height: 300px; overflow-y: auto;"></div>
+    <form id="chat-form">
+      <input type="text" id="chat-input" class="form-control mb-2" placeholder="Type a message..." required>
+      <button type="submit" class="btn btn-info">Send</button>
+    </form>
+  </div>
 
   <script>
-    async function loadChat() {
-      const res = await apiGet("/api/chat/load");
-      if (res.messages) {
-        document.getElementById("chat").value = res.messages.map(m => m.content).join("\n");
-      }
-    }
-    async function sendMessage() {
-      const msg = document.getElementById("messageInput").value;
-      if (!msg) return;
-      const res = await apiPost("/api/chat/save", { messages: [{ content: msg }] });
-      if (res.success) {
-        await loadChat();
-        document.getElementById("messageInput").value = "";
-      }
-    }
-    loadChat();
+  (async () => {
+    try {
+      const res = await apiGet("/api/auth/me");
+      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
+      else document.getElementById("navbar-username").innerText = "Guest";
+    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
+  })();
   </script>
 </body>
 </html>
