--- a/nginx/html/login.html
+++ b/nginx/html/login.html
@@ -5,31 +5,50 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/common.css">
   <script src="/static/js/common.js"></script>
+  <style>
+    body { background-color: #111; color: #eee; }
+  </style>
 </head>
-<body class="container mt-5">
-  <h1><i class="fas fa-sign-in-alt"></i> Login</h1>
-  <form id="loginForm" class="mb-3">
-    <input type="text" id="username" class="form-control mb-2" placeholder="Username" required>
-    <input type="password" id="password" class="form-control mb-2" placeholder="Password" required>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-  <div id="flash-messages"></div>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Devstral</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
+      </ul>
+      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
+      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <h2>Login</h2>
+    <form id="login-form">
+      <div class="mb-3"><label class="form-label">Username</label><input type="text" id="username" class="form-control" required></div>
+      <div class="mb-3"><label class="form-label">Password</label><input type="password" id="password" class="form-control" required></div>
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+  </div>
 
   <script>
-    document.getElementById("loginForm").onsubmit = async function(e) {
-      e.preventDefault();
-      const username = DevstralCommon.val("#username");
-      const password = DevstralCommon.val("#password");
-      const res = await DevstralCommon.login(username, password);
-      if (res.success && res.token) {
-        localStorage.setItem("jwt", res.token);
-        location.href = "/chat";
-      } else {
-        DevstralCommon.showFlashMessage("Login failed.", "danger");
-      }
-    };
+  (async () => {
+    try {
+      const res = await apiGet("/api/auth/me");
+      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
+      else document.getElementById("navbar-username").innerText = "Guest";
+    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
+  })();
+
+  document.getElementById("login-form").addEventListener("submit", async e => {
+    e.preventDefault();
+    const username = document.getElementById("username").value;
+    const password = document.getElementById("password").value;
+    const res = await apiPost("/api/auth/login", { username, password });
+    if (res.success) location.href = "/chat";
+    else alert("Login failed");
+  });
   </script>
 </body>
 </html>
