--- a/nginx/html/rate_limit.html
+++ b/nginx/html/rate_limit.html
@@ -1,50 +1,41 @@
-<!-- rate_limit.html -->
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate Limited</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/common.css">
+  <title>Rate Limit Exceeded</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/static/js/common.js"></script>
+  <style>
+    body { background-color: #111; color: #eee; }
+  </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <i class="bi bi-robot"></i> Devstral AI
-            </a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/">
-                    <i class="bi bi-house"></i> Home
-                </a>
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Devstral</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
+      </ul>
+      <span class="navbar-text me-3" id="navbar-username">Loading...</span>
+      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </nav>
 
-    <main class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <div class="error-page-container">
-                    <div class="robot-icon">⏰</div>
-                    <div class="error-code">429</div>
-                    <h1 class="error-message">Rate Limited</h1>
-                    <p class="error-description">
-                        You're sending requests too quickly. Please wait a moment before trying again.
-                        This helps us maintain service quality for everyone.
-                    </p>
-                    <div class="error-actions">
-                        <a href="/" class="error-btn">
-                            🏠 Go Home
-                        </a>
-                        <button class="error-btn secondary" onclick="setTimeout(() => window.location.reload(), 5000)">
-                            ⏳ Wait & Retry
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+  <div class="container mt-5 text-center">
+    <h2><i class="fas fa-exclamation-triangle"></i> Too many requests</h2>
+    <p>Please wait a moment before trying again.</p>
+  </div>
+
+  <script>
+  (async () => {
+    try {
+      const res = await apiGet("/api/auth/me");
+      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
+      else document.getElementById("navbar-username").innerText = "Guest";
+    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
+  })();
+  </script>
 </body>
 </html>
