--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -7,11 +7,15 @@
   <script src="/js/common.js" defer></script>
   <style>
     canvas#bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 9999;     /* On top of all */
+        pointer-events: none; /* Click-through */
     }
+
 
     body, html {
       margin: 0;
