--- a/nginx/html/register.html
+++ b/nginx/html/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Devstral LLM</title>
+  <title>Devstral LLM - Register</title>
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/common.css">
   <script src="/js/lib/jquery.min.js" defer></script>
@@ -18,21 +18,20 @@
     <span id="navbar-username">Guest</span>
   </nav>
 
-  <main>
+  <main class="container mt-5">
     <h2>Register</h2>
     <form id="register-form">
-      <input type="text" name="username" placeholder="Username" required><br>
-      <input type="password" name="password" placeholder="Password" required><br>
-      <button type="submit">Register</button>
+      <input type="text" name="username" placeholder="Username" required class="form-control mb-2">
+      <input type="password" name="password" placeholder="Password" required class="form-control mb-2">
+      <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </main>
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-     DevstralCommon.loadUser();
-    DevstralCommon.setupRegister();
-});
-
+      DevstralCommon.loadUser();
+      DevstralCommon.setupRegister();
+    });
   </script>
 </body>
 </html>
