--- a/nginx/html/register.html
+++ b/nginx/html/register.html
@@ -2,22 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Devstral LLM - Register</title>
+  <title>Register</title>
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/common.css">
   <script src="/js/lib/jquery.min.js" defer></script>
-  <script src="/js/lib/bootstrap.min.js" defer></script>
   <script src="/js/common.js" defer></script>
 </head>
 <body class="dark-theme">
-  <nav class="top-nav">
-    <a href="/chat.html">Chat</a>
-    <a href="/admin.html">Admin</a>
-    <a href="/register.html">Register</a>
-    <button id="logout-button" style="display: none;">Logout</button>
-    <span id="navbar-username">Guest</span>
-  </nav>
-
   <main class="container mt-5">
     <h2>Register</h2>
     <form id="register-form">
@@ -26,10 +17,8 @@
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
   </main>
-
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-      DevstralCommon.loadUser();
       DevstralCommon.setupRegister();
     });
   </script>
