--- a/nginx/html/login.html
+++ b/nginx/html/login.html
@@ -6,7 +6,7 @@
     <title>Login - ai.junder.uk</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -103,7 +103,7 @@
 
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
-    <script src="/static/js/common.js"></script>
+    <script src="/js/common.js"></script>
     <script>
         class LoginPage {
             constructor() {
